--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <!-- Project Card 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/tetris.png" alt="Project 1" class="w-full h-48 object-cover">
+                    <img src="./images/Tetris.png" alt="Project 1" class="w-full h-48 object-cover">
                     <div class="p-4 sm:p-6">
                         <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">Tetris Game</h3>
                         <p class="text-sm sm:text-base text-gray-600">A simple tetris game built using HTML, CSS, and JavaScript.</p>
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/sports.png" alt="Project 1" class="w-full h-48 object-cover">
+                    <img src="./images/Sports.png" alt="Project 1" class="w-full h-48 object-cover">
                     <div class="p-4 sm:p-6">
                         <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">Sports Website</h3>
                         <p class="text-sm sm:text-base text-gray-600">A sports website built using HTML, CSS, and JavaScript.</p>
