--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">About Me</h2>
             <div class="flex flex-col md:flex-row items-center justify-between">
                 <div class="md:w-1/2 mb-8 md:mb-0">
-                    <img src="images/image.png" alt="Profile" class="rounded-lg shadow-lg">
+                    <img src="Profile/Profile.jpg" alt="Profile" class="rounded-lg shadow-lg">
                 </div>
                 <div class="md:w-1/2 md:pl-12">
                     <p class="text-gray-600 leading-relaxed mb-6">
