--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
                 </div>
             </div>
 
+            <!-- UI/UX Skill -->
+<div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
+    <div class="flex flex-col items-center">
+        <!-- You can use an icon library like Heroicons or FontAwesome -->
+        <svg class="w-12 h-12 text-green-500 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+        </svg>
+        <h3 class="text-lg font-semibold mb-2">UI/UX Design</h3>
+        <div class="w-full bg-gray-200 rounded-full h-2.5">
+            <div class="bg-green-500 h-2.5 rounded-full" style="width: 75%"></div>
+        </div>
+        <span class="text-sm text-gray-600 mt-2">75%</span>
+    </div>
+</div>
+
            
         </div>
     </section>
