--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Projects Section (No changes here) -->
     <section id="projects" class="py-12 sm:py-20 bg-white">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl sm:text-4xl font-bold text-center text-gray-800 mb-12">My Projects</h2>
