--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navigation -->
-    <nav class="fixed w-full bg-white shadow-lg z-50">
-        <div class="container mx-auto px-4 sm:px-6 py-4">
+    <nav class="fixed top-0 left-0 w-full bg-transparent text-white shadow-lg z-50 transition-all duration-300" id="navbar">
+        <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="text-xl sm:text-2xl font-bold text-gray-800">Portfolio</div>
                 <div class="hidden md:flex space-x-8">
-                    <a href="#home" class="text-gray-600 hover:text-gray-900">Home</a>
-                    <a href="#about" class="text-gray-600 hover:text-gray-900">About</a>
-                    <a href="#skills" class="text-gray-600 hover:text-gray-900">Skills</a>
-                    <a href="#projects" class="text-gray-600 hover:text-gray-900">Projects</a>
-                    <a href="#contact" class="text-gray-600 hover:text-gray-900">Contact</a>
+                    <a href="#home" class="text-white hover:text-blue-500 transition">Home</a>
+                    <a href="#about" class="text-white hover:text-blue-500 transition">About</a>
+                    <a href="#skills" class="text-white hover:text-blue-500 transition">Skills</a>
+                    <a href="#projects" class="text-white hover:text-blue-500 transition">Projects</a>
+                    <a href="#contact" class="text-white hover:text-blue-500 transition">Contact</a>
                 </div>
-                <!-- Mobile menu button -->
+                <!-- Mobile Menu Button -->
                 <button class="md:hidden p-2 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" id="menu-btn" aria-label="Toggle menu">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
                 </button>
@@ -31,11 +31,12 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="pt-20 md:pt-32 bg-[url('https://images.unsplash.com/photo-1662116137244-b7c6fdc1ac35?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')]">
-        <div class="container mx-auto px-4 sm:px-6 py-12 sm:py-16 text-center">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-gray-800 mb-4">Hi, I'm Krijan Maharjan</h1>
-            <p class="text-lg sm:text-xl text-gray-600 mb-8">Frontend Developer</p>
-            <button class="bg-blue-600 text-white px-8 py-3 rounded-full hover:bg-blue-700 transition">Get in Touch</button>
+    <section id="home" class="relative pt-20 md:pt-32 bg-[url('https://images.unsplash.com/photo-1662116137244-b7c6fdc1ac35?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] bg-cover bg-center text-white">
+        <div class="absolute inset-0 bg-black opacity-40"></div>
+        <div class="container mx-auto px-6 py-16 sm:py-20 text-center relative z-10">
+            <h1 class="text-5xl sm:text-6xl font-bold mb-4 animate__animated animate__fadeIn animate__delay-1s">Hi, I'm Krijan Maharjan</h1>
+            <p class="text-xl sm:text-2xl mb-8 animate__animated animate__fadeIn animate__delay-1.5s">Frontend Developer</p>
+            <a href="#contact" class="bg-blue-600 text-white px-8 py-3 rounded-full hover:bg-blue-700 transition transform hover:scale-105">Get in Touch</a>
         </div>
     </section>
 
