--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="fixed top-0 left-0 w-full bg-black bg-opacity-50 text-white shadow-lg z-50 transition-all duration-300" id="navbar">
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
-                <div class="text-xl sm:text-2xl font-bold text-gray-800">Portfolio</div>
+                <div class="text-xl sm:text-2xl font-bold text-white">Portfolio</div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#home" class="text-white hover:text-blue-500 transition">Home</a>
                     <a href="#about" class="text-white hover:text-blue-500 transition">About</a>
@@ -38,7 +38,7 @@
             <div class="container mx-auto text-center">
                 <h2 class="text-3xl font-bold mb-8">My Skills</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
-                    
+
                     <!-- Frontend Skill -->
                     <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
                         <div class="flex flex-col items-center">
@@ -120,12 +120,14 @@
         const mobileMenu = document.getElementById('mobile-menu');
         const closeMenuBtn = document.getElementById('close-menu-btn');
 
+        // Toggle mobile menu visibility
         menuBtn.addEventListener('click', () => {
-            mobileMenu.classList.toggle('translate-x-full');
+            mobileMenu.classList.toggle('translate-x-full'); // Toggle the slide-in effect
         });
 
+        // Close mobile menu when the close button is clicked
         closeMenuBtn.addEventListener('click', () => {
-            mobileMenu.classList.add('translate-x-full');
+            mobileMenu.classList.add('translate-x-full'); // Hide the menu again
         });
     </script>
 </body>
