--- a/index.html
+++ b/index.html
@@ -1,3 +1,121 @@
+<style>
+    /* General Styling */
+    body {
+        background-color: #f9f9f9;
+        font-family: 'Inter', sans-serif;
+        line-height: 1.6;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    a {
+        text-decoration: none;
+        transition: color 0.3s ease;
+    }
+
+    a:hover {
+        color: #1d4ed8;
+    }
+
+    /* Navigation */
+    nav {
+        backdrop-filter: blur(10px);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    nav a:hover {
+        color: #2563eb;
+        text-decoration: underline;
+    }
+
+    /* Hero Section */
+    #home {
+        position: relative;
+        color: white;
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+                    url('https://images.unsplash.com/photo-1662116137244-b7c6fdc1ac35?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') 
+                    no-repeat center/cover;
+        background-attachment: fixed;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+    }
+
+    #home button {
+        transform: scale(1);
+        transition: transform 0.3s ease, background-color 0.3s ease;
+    }
+
+    #home button:hover {
+        transform: scale(1.1);
+        background-color: #1e3a8a;
+    }
+
+    /* Section Headings */
+    section h2 {
+        color: #2c3e50;
+        font-size: 2.5rem;
+        margin-bottom: 1.5rem;
+    }
+
+    /* Skills Section */
+    .skill-card {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .skill-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .skill-card h3 {
+        color: #334155;
+    }
+
+    .skill-card div {
+        transition: width 0.5s ease;
+    }
+
+    /* Projects Section */
+    .project-card {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .project-card:hover {
+        transform: scale(1.03);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    }
+
+    .project-card h3 {
+        color: #374151;
+    }
+
+    .project-card img {
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .project-card:hover img {
+        transform: scale(1.05);
+        opacity: 0.9;
+    }
+
+    /* Contact Section */
+    #contact a {
+        background-color: #2563eb;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    #contact a:hover {
+        background-color: #1e40af;
+        transform: scale(1.05);
+    }
+
+    #contact svg {
+        transition: transform 0.3s ease;
+    }
+
+    #contact a:hover svg {
+        transform: translateX(5px);
+    }
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
