--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
     <style>
         /* General Reset */
         * {
@@ -14,45 +14,45 @@
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
-            color: #2c3e50;
-            background-color: #f3f4f6;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
             line-height: 1.6;
         }
 
         a {
             text-decoration: none;
             color: inherit;
-            transition: all 0.3s ease;
+            transition: color 0.3s ease;
         }
 
         a:hover {
-            color: #2563eb;
+            color: #007BFF;
         }
 
         /* Navbar */
         nav {
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            background-color: #fff;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 1rem 2rem;
+            background-color: #fff;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
         nav .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #2563eb;
+            color: #007BFF;
         }
 
         nav ul {
-            list-style: none;
             display: flex;
-            gap: 2rem;
+            list-style: none;
+            gap: 1.5rem;
         }
 
         nav ul li {
@@ -60,25 +60,26 @@
         }
 
         nav ul li a:hover {
-            border-bottom: 2px solid #2563eb;
+            color: #0056b3;
         }
 
         /* Hero Section */
         #hero {
             height: 100vh;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), 
+                        url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4') no-repeat center/cover;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             text-align: center;
             color: white;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                        url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4') no-repeat center/cover;
         }
 
         #hero h1 {
             font-size: 3rem;
             font-weight: 700;
             margin-bottom: 1rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         }
 
         #hero p {
@@ -87,17 +88,19 @@
         }
 
         #hero .cta {
-            background-color: #2563eb;
+            background-color: #007BFF;
+            color: white;
             padding: 1rem 2rem;
             border-radius: 50px;
-            color: white;
-            font-weight: 600;
             font-size: 1.2rem;
-            transition: all 0.3s ease;
+            font-weight: 600;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
         #hero .cta:hover {
-            background-color: #1e3a8a;
+            background-color: #0056b3;
+            transform: translateY(-5px);
         }
 
         /* Section Styling */
@@ -108,15 +111,15 @@
 
         section h2 {
             font-size: 2.5rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-            color: #2c3e50;
+            font-weight: 700;
+            margin-bottom: 1.5rem;
+            color: #333;
         }
 
         section p {
-            color: #64748b;
-            margin-bottom: 2rem;
             font-size: 1rem;
+            color: #555;
+            margin-bottom: 2rem;
         }
 
         /* Skills Section */
@@ -128,13 +131,11 @@
         }
 
         #skills .skill-card {
-            background-color: #fff;
+            background: white;
+            border-radius: 10px;
             padding: 2rem;
-            border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-            width: 250px;
-            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         #skills .skill-card:hover {
@@ -143,27 +144,9 @@
         }
 
         #skills .skill-card h3 {
-            font-size: 1.5rem;
+            color: #007BFF;
             margin-bottom: 1rem;
-            color: #2563eb;
-        }
-
-        #skills .skill-card span {
-            display: inline-block;
-            width: 80%;
-            height: 8px;
-            margin: 1rem auto;
-            background-color: #e5e7eb;
-            border-radius: 5px;
-            overflow: hidden;
-            position: relative;
-        }
-
-        #skills .skill-card span div {
-            width: 90%;
-            height: 100%;
-            background-color: #2563eb;
-            position: absolute;
+            font-size: 1.5rem;
         }
 
         /* Projects Section */
@@ -174,15 +157,16 @@
         }
 
         #projects .project-card {
-            background-color: #fff;
-            border-radius: 8px;
+            background-color: white;
+            border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         #projects .project-card:hover {
-            transform: scale(1.05);
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
 
         #projects .project-card img {
@@ -193,36 +177,36 @@
         #projects .project-card h3 {
             padding: 1rem;
             font-size: 1.5rem;
-            color: #2563eb;
+            color: #007BFF;
         }
 
         /* Contact Section */
         #contact {
-            background-color: #2563eb;
+            background-color: #007BFF;
             color: white;
+            padding: 4rem 2rem;
         }
 
         #contact a {
             display: inline-block;
             background-color: white;
-            color: #2563eb;
+            color: #007BFF;
             padding: 1rem 2rem;
-            margin-top: 2rem;
             border-radius: 50px;
             font-weight: 600;
-            transition: all 0.3s ease;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         #contact a:hover {
-            background-color: #1e3a8a;
+            background-color: #0056b3;
             color: white;
         }
 
         footer {
+            background-color: #0056b3;
+            color: white;
             padding: 1rem 0;
             text-align: center;
-            background-color: #1e3a8a;
-            color: white;
         }
     </style>
 </head>
@@ -250,15 +234,12 @@
         <div class="skills-container">
             <div class="skill-card">
                 <h3>HTML</h3>
-                <span><div style="width: 90%;"></div></span>
             </div>
             <div class="skill-card">
                 <h3>CSS</h3>
-                <span><div style="width: 85%;"></div></span>
             </div>
             <div class="skill-card">
                 <h3>JavaScript</h3>
-                <span><div style="width: 70%;"></div></span>
             </div>
         </div>
     </section>
