--- a/index.html
+++ b/index.html
@@ -75,6 +75,51 @@
     </div>
 </section>
 
+<!-- Education Section -->
+<section id="education" class="py-12 sm:py-20 bg-white">
+    <div class="container mx-auto px-4 sm:px-6">
+        <h2 class="text-2xl sm:text-3xl font-bold text-center text-gray-800 mb-8">Education</h2>
+        <div class="flex flex-col md:flex-row justify-between items-center">
+            <!-- Education Card 1 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden mb-6 md:mb-0">
+                <div class="p-6">
+                    <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">Secondary Education Examination</h3>
+                    <p class="text-gray-600 text-sm mb-2">Landmark Academy</p>
+                    <p class="text-gray-600 text-sm mb-2">Passed Out : 2017</p>
+                    <p class="text-sm text-gray-600">I pursued my Secondary Education Examination degree with a focus on my subject materials. 
+                        I scored GPS(Grade Point Average) of 3.00 in my SEE exam.</p>
+                </div>
+            </div>
+
+            <!-- Education Card 2 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden mb-6 md:mb-0">
+                <div class="p-6">
+                    <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">National Examination Board</h3>
+                    <p class="text-gray-600 text-sm mb-2">D.A.V College</p>
+                    <p class="text-gray-600 text-sm mb-2">Passed Out : 2020</p>
+                    <p class="text-sm text-gray-600">I pursued my National Examination Board degree with a focus on subject materials.
+                    I scored GPS(Grade Point Average) of 2.19 in my National Examination Board exam.</p>
+                </div>
+            </div>
+
+            <!-- Education Card 3 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden mb-6 md:mb-0">
+                <div class="p-6">
+                    <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">Bachelor of Computer Applications</h3>
+                    <p class="text-gray-600 text-sm mb-2">D.A.V College</p>
+                    <p class="text-gray-600 text-sm mb-2">Passed Out : Continue</p>
+                    <p class="text-sm text-gray-600">I pursued my Bachelor's degree with a focus on software development
+                        and computer science. I gained hands-on experience in programming languages, algorithms, and
+                        data structures.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
     <!-- Skills Section -->
     <section id="skills" class="py-12 sm:py-20 bg-gray-50">
@@ -257,16 +302,7 @@
                                     d="M12 2.163c3.3 0 3.693.012 4.986.072 1.304.061 2.418.253 3.295 1.13.877.877 1.07 1.991 1.131 3.295.061 1.293.072 1.686.072 4.986s-.011 3.693-.072 4.986c-.061 1.304-.253 2.418-1.13 3.295-.877.877-1.991 1.07-3.295 1.131-1.293.061-1.686.072-4.986.072s-3.693-.011-4.986-.072c-1.304-.061-2.418-.253-3.295-1.131-.877-.877-1.07-1.991-1.131-3.295-.061-1.293-.072-1.686-.072-4.986s.011-3.693.072-4.986c.061-1.304.253-2.418 1.131-3.295.877-.877 1.991-1.07 3.295-1.131 1.293-.061 1.686-.072 4.986-.072zm0-2.163c-3.348 0-3.747.012-5.064.073-1.42.061-2.617.282-3.656 1.32-.986.986-1.258 2.284-1.32 3.656-.061 1.317-.073 1.716-.073 5.064s.012 3.747.073 5.064c.061 1.372.282 2.67 1.32 3.656.986 1.038 2.236 1.259 3.656 1.32 1.317.061 1.716.073 5.064.073s3.747-.012 5.064-.073c1.42-.061 2.67-.282 3.656-1.32.986-.986 1.258-2.284 1.32-3.656.061-1.317.073-1.716.073-5.064s-.012-3.747-.073-5.064c-.061-1.372-.282-2.67-1.32-3.656-1.038-1.038-2.236-1.259-3.656-1.32-1.317-.061-1.716-.073-5.064-.073zm0 6.166a5.834 5.834 0 1 0 5.834 5.834 5.834 5.834 0 0 0-5.834-5.834zm0 9.001a3.167 3.167 0 1 1 3.167-3.167 3.167 3.167 0 0 1-3.167 3.167zm7.184-7.645c-.853 0-1.546-.693-1.546-1.546s.693-1.546 1.546-1.546 1.546.693 1.546 1.546-.693 1.546-1.546 1.546z" />
                             </svg>
                         </a>
-                        <a href="mailto:idosabin78@gmail.com" style="text-decoration: none; color: inherit;">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24">
-                                <path
-                                    d="M12 2.163c3.3 0 3.693.012 4.986.072 1.304.061 2.418.253 3.295 1.13.877.877 1.07 1.991 1.131 3.295.061 1.293.072 1.686.072 4.986s-.011 3.693-.072 4.986c-.061 1.304-.253 2.418-1.13 3.295-.877.877-1.991 1.07-3.295 1.131-1.293.061-1.686.072-4.986.072s-3.693-.011-4.986-.072c-1.304-.061-2.418-.253-3.295-1.131-.877-.877-1.07-1.991-1.131-3.295-.061-1.293-.072-1.686-.072-4.986s.011-3.693.072-4.986c.061-1.304.253-2.418 1.131-3.295.877-.877 1.991-1.07 3.295-1.131 1.293-.061 1.686-.072 4.986-.072zm0-2.163c-3.348 0-3.747.012-5.064.073-1.42.061-2.617.282-3.656 1.32-.986.986-1.258 2.284-1.32 3.656-.061 1.317-.073 1.716-.073 5.064s.012 3.747.073 5.064c.061 1.372.282 2.67 1.32 3.656.986 1.038 2.236 1.259 3.656 1.32 1.317.061 1.716.073 5.064.073s3.747-.012 5.064-.073c1.42-.061 2.67-.282 3.656-1.32.986-.986 1.258-2.284 1.32-3.656.061-1.317.073-1.716.073-5.064s-.012-3.747-.073-5.064c-.061-1.372-.282-2.67-1.32-3.656-1.038-1.038-2.236-1.259-3.656-1.32-1.317-.061-1.716-.073-5.064-.073zm0 6.166a5.834 5.834 0 1 0 5.834 5.834 5.834 5.834 0 0 0-5.834-5.834zm0 9.001a3.167 3.167 0="
-                                    1" 1 3.167-3.167 3.167 3.167 0 0 1-3.167 3.167zm7.184-7.645c-.853 0-1.546-.693-1.546-1.546s.693-1.546
-                                    1.546-1.546 1.546.693 1.546 1.546-.693 1.546-1.546 1.546z" />
-                            </svg>
-                            
                     
-
                     </div>
 
 <div class="contact-info"
@@ -277,7 +313,7 @@
             <path
                 d="M12 2C8.13401 2 5 5.13401 5 9C5 15.25 12 22 12 22C12 22 19 15.25 19 9C19 5.13401 15.866 2 12 2ZM12 11C10.8954 11 10 10.1046 10 9C10 7.89543 10.8954 7 12 7C13.1046 7 14 7.89543 14 9C14 10.1046 13.1046 11 12 11Z" />
         </svg>
-        Lonla, Lalitpur
+        : Lonla, Lalitpur
     </div>
     <div style="display: flex; align-items: center; margin-bottom: 8px;">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" fill="black"
@@ -285,7 +321,7 @@
             <path
                 d="M20 4H4C2.89 4 2 4.89 2 6V18C2 19.11 2.89 20 4 20H20C21.11 20 22 19.11 22 18V6C22 4.89 21.11 4 20 4ZM20 18H4V8L12 13L20 8V18ZM12 11L4 6H20L12 11Z" />
         </svg>
-        <a href="mailto:idosabin78@gmail.com" style="color: black; text-decoration: none;">idosabin78@gmail.com</a>
+        <a href="mailto:idosabin78@gmail.com" style="color: black; text-decoration: none;"> : idosabin78@gmail.com</a>
     </div>
     <div style="display: flex; align-items: center;">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512" fill="black"
@@ -293,7 +329,7 @@
             <path
                 d="M478.94,370.14c-5.22-5.56-23.65-22-57.53-43.75-34.13-21.94-59.3-35.62-66.52-38.81a3.83,3.83,0,0,0-3.92.49c-11.63,9.07-31.21,25.73-32.26,26.63-6.78,5.81-6.78,5.81-12.33,4-9.76-3.2-40.08-19.3-66.5-45.78s-43.35-57.55-46.55-67.3c-1.83-5.56-1.83-5.56,4-12.34.9-1.05,17.57-20.63,26.64-32.25a3.83,3.83,0,0,0,.49-3.92c-3.19-7.23-16.87-32.39-38.81-66.52-21.78-33.87-38.2-52.3-43.76-57.52A3.9,3.9,0,0,0,138,32.2,322.35,322.35,0,0,0,82,57.65,338,338,0,0,0,33.35,92a3.83,3.83,0,0,0-1.26,3.74c2.09,9.74,12.08,50.4,43.08,106.72,31.63,57.48,53.55,86.93,100,133.22S252,405.21,309.54,436.84c56.32,31,97,41,106.72,43.07a3.86,3.86,0,0,0,3.75-1.26A337.73,337.73,0,0,0,454.35,430a322.7,322.7,0,0,0,25.45-56A3.9,3.9,0,0,0,478.94,370.14Z" />
         </svg>
-        <a href="tel:9768400386" style="color: black; text-decoration: none;"> 9768400386</a>
+        <a href="tel:9768400386" style="color: black; text-decoration: none;"> : 9768400386</a>
     </div>
 </div>
 
