--- a/index.html
+++ b/index.html
@@ -36,15 +36,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home"
-        class="pt-20 md:pt-32 bg-[url('https://images.unsplash.com/photo-1662116137244-b7c6fdc1ac35?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')]">
-        <div class="container mx-auto px-4 sm:px-6 py-12 sm:py-16 text-center">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-gray-800 mb-4">Hi, I'm Krijan Maharjan</h1>
-            <p class="text-lg sm:text-xl text-gray-600 mb-8">Frontend Developer</p>
+<section id="home"
+    class="pt-20 md:pt-32 relative bg-[url('https://www.shutterstock.com/image-photo/programmer-people-working-laptops-smartphones-600nw-2473384115.jpg')] bg-cover bg-center">
+    <div class="absolute inset-0 bg-black opacity-50"></div> <!-- Dark overlay -->
+    <div class="container mx-auto px-4 sm:px-6 py-12 sm:py-16 text-center relative z-10">
+        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-indigo-200 mb-4"
+            style="text-shadow: 0 0 20px rgba(0, 191, 255, 0.8), 0 0 30px rgba(0, 191, 255, 0.6), 0 0 40px rgba(0, 191, 255, 0.4), 0 0 50px rgba(0, 191, 255, 0.2);">
+            Hi, I'm Krijan Maharjan</h1>
+        <p class="text-xl sm:text-2xl text-indigo-100 mb-8"
+            style="text-shadow: 0 0 20px rgba(0, 191, 255, 0.8), 0 0 30px rgba(0, 191, 255, 0.6), 0 0 40px rgba(0, 191, 255, 0.4), 0 0 50px rgba(0, 191, 255, 0.2);">
+            Frontend Developer</p>
+        <a href="https://www.instagram.com/krijanmaharjan/" target="_blank">
             <button class="bg-blue-600 text-white px-8 py-3 rounded-full hover:bg-blue-700 transition">Get in
                 Touch</button>
-        </div>
-    </section>
+        </a>
+    </div>
+</section>
 
     <!-- About Section -->
 <section id="about" class="py-20 bg-white">
