--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
         <div class="flex flex-col md:flex-row items-center justify-between">
             <!-- Image Section -->
             <div class="md:w-1/2 flex justify-center mb-8 md:mb-0">
-<img src="./images/Profile.png" alt="Profile Picture" class="w-64 h-64 object-cover rounded-full shadow-md">
+                <div
+                    class="w-64 h-64 bg-[url('https://www.shutterstock.com/image-photo/programmer-people-working-laptops-smartphones-600nw-2473384115.jpg')] bg-cover bg-center rounded-full shadow-md">
+                </div>
             </div>
+
             <!-- Text Section -->
             <div class="md:w-1/2 md:pl-12">
                 <p class="text-gray-600 text-lg leading-relaxed mb-6">
@@ -240,7 +243,12 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <!-- Project Card 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Tetris.png" alt="Sports" class="w-full h-48 object-cover">
+                    <div
+                        class="pt-20 md:pt-32 relative bg-[url('https://miro.medium.com/v2/resize:fit:1400/1*26lHxJ2Icsx4BWct9-h6Tw.jpeg')] bg-cover bg-center w-full h-48">
+                        <!-- Optionally, you can add a background overlay or content inside this div -->
+                    </div>
+
+                    
                     <div class="p-4 sm:p-6">
                         <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">Tetris Game</h3>
                         <p class="text-sm sm:text-base text-gray-600">A simple tetris game built using HTML, CSS, and
@@ -251,7 +259,14 @@
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/sports.png" alt="Sports" class="w-full h-48 object-cover">
+                    <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                        <div
+                            class="pt-20 md:pt-32 relative bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwCHppOWQ_VkgVsjMohsVnUVwaGzZAukxw&s')] bg-cover bg-center w-full h-48">
+                            <!-- Optionally, you can add a background overlay or content inside this div -->
+                        </div>
+                        
+                    </div>
+
                     <div class="p-4 sm:p-6">
                         <h3 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">Sports Website</h3>
                         <p class="text-sm sm:text-base text-gray-600">A sports website built using HTML, CSS, and
