--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Image Section -->
             <div class="md:w-1/2 flex justify-center mb-8 md:mb-0">
                 <div
-                    class="w-64 h-64 bg-[url('https://www.shutterstock.com/image-photo/programmer-people-working-laptops-smartphones-600nw-2473384115.jpg')] bg-cover bg-center rounded-full shadow-md">
+                    class="w-64 h-64 bg-[url('https://blogger.googleusercontent.com/img/a/AVvXsEieI_oJejZFR-5TP6pnMYRj6WCpe68bqrkI0wvfOdLEFqPev7cDUnkBtD-oExkjk9k_jofA90DNTDAXkXFJ1gv9zwpL0QSkt1__4JOKfdWe8OrJ4FoHOUluWFU5w93dOLacnJFijtDqABUhXIg_GLqVvxFSSBCleebzp57KU7oVoVEoPXEp7uVs5PqfZ0_9')] bg-cover bg-center rounded-full shadow-md">
                 </div>
             </div>
 
