--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="hidden md:flex space-x-8">
                 <a href="#home" class="text-blue-700 hover:text-purple-800">Home</a>
                 <a href="#about" class="text-blue-700 hover:text-purple-800">About</a>
+                <a href="#education" class="text-blue-700 hover:text-purple-800">Education</a>
                 <a href="#skills" class="text-blue-700 hover:text-purple-800">Skills</a>
                 <a href="#projects" class="text-blue-700 hover:text-purple-800">Projects</a>
                 <a href="#contact" class="text-blue-700 hover:text-purple-800">Contact</a>
